--- a/.github/workflows/record-traffic.yml
+++ b/.github/workflows/record-traffic.yml
@@ -23,6 +23,9 @@ jobs:
         with:
           python-version: '3.11'
 
+      - name: Install dependencies
+        run: pip install requests
+
       - name: Fetch traffic data
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
