使用 Personal Access Token 访问 Traffic API

--- a/.github/workflows/record-traffic.yml
+++ b/.github/workflows/record-traffic.yml
@@ -20,7 +20,7 @@ jobs:
 
       - name: Fetch traffic data with curl
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TRAFFIC_PAT }}
           REPO_OWNER: ${{ github.repository_owner }}
           REPO_NAME: ${{ github.event.repository.name }}
         run: |
