--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "docs:dev": "vitepress dev",
     "docs:build": "vitepress build",
-    "docs:preview": "vitepress preview"
+    "docs:preview": "vitepress preview",
+    "video:preview": "remotion studio",
+    "video:render": "remotion render HomeHeroVideo public/videos/home-hero.mp4"
   },
   "keywords": [
     "LLM",
@@ -17,13 +19,22 @@
   ],
   "author": "joyehuang",
   "license": "MIT",
+  "packageManager": "pnpm@9.9.0",
   "devDependencies": {
+    "@remotion/cli": "^4.0.407",
+    "@remotion/google-fonts": "^4.0.407",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "markdown-it-mathjax3": "^4.3.2",
+    "remotion": "^4.0.407",
+    "typescript": "^5.9.3",
     "vitepress": "^1.0.0",
     "vue": "^3.4.0"
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
-    "@vercel/speed-insights": "^1.3.1"
+    "@vercel/speed-insights": "^1.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1"
   }
 }
